--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html>
   <head>
-    <title>Test</title>
+	<title>Test</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <h1>Hello World!</h1>
